src/test/ui/moves-based-on-type-block-bad.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/moves-based-on-type-block-bad.rs:34:19
   |
LL |             match hellothere.x { //~ ERROR cannot move out
   |                   ^^^^^^^^^^^^
   |                   |
   |                   cannot move out of borrowed content
   |                   help: consider using a reference instead: `&hellothere.x`
...
LL |                 box E::Bar(x) => println!("{}", x.to_string()),
   |                            - move occurs because x has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
